--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,44 @@
 services:
-  kartcis-frontend:
+  db:
+    image: postgres:15-alpine
+    restart: unless-stopped
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: kartcis
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+
+  migrate:
+    image: migrate/migrate
+    volumes:
+      - ./migrations:/migrations:ro
+    command:
+      - -path=/migrations
+      - -database=postgres://postgres:password@db:5432/kartcis?sslmode=disable
+      - up
+    depends_on:
+      db:
+        condition: service_healthy
+
+  backend:
     build:
       context: .
-      dockerfile: Dockerfile
-      target: production
+      dockerfile: Dockerfile.prod
     restart: unless-stopped
     ports:
-      - "80:80"
+      - "8000:8000"
     environment:
-      - NODE_ENV=production
-    healthcheck:
-      test: ["CMD-SHELL", "wget -qO- http://localhost/ >/dev/null 2>&1 || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-    labels:
-      - "com.kartcis.description=KARTCIS.ID Ticketing System Frontend"
+      PORT: "8000"
+      DATABASE_URL: "host=db user=postgres password=password dbname=kartcis port=5432 sslmode=disable"
+    depends_on:
+      migrate:
+        condition: service_completed_successfully
+
+volumes:
+  postgres_data:
